# PicoMK

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  README.md  base.cc  base.h  builtin_keycode.cc  config.cmake  config.h  config_modifier.cc  config_modifier.h  configuration.cc  configuration.h  display_mixins.cc  display_mixins.h  ibp.cc  ibp.h  ibp_base.c  ibp_base.h  ibp_lib.c  ibp_lib.h  irq.cc  irq.h  joystick.cc  joystick.h  keyscan.cc  keyscan.h  layout.cc  layout.h  layout_helper.h  layout_internal.cc  layout_internal.inc  main.c  main.cc  peripheral.cc  peripheral.h  rotary_encoder.cc  rotary_encoder.h  (+20 more)
configs/cyberkeeb_2040/: config.h  layout.cc
configs/default/: config.h  layout.cc
configs/examples/bare_minimum/: layout.cc
configs/examples/custom_keycode/: README.md  config.h  layout.cc
configs/examples/home_screen/: README.md  config.h  layout.cc
configs/ibp_debug/: config.h  layout.cc
configs/spi_debug/: config.h  layout.cc
docs/: config.md  design.md  devices.md  ibp.md  layout_cc.md
linux/: Makefile  keyboard.c  keyboard.h  mouse.h  spi1-picomk-overlay.dts  spi_module.c
littlefs/: CMakeLists.txt
pio/: ws2812.pio
